# RegulAI

./: .env.example  .gitignore  .repomixignore  PROJET_STRUCTURE.md  README.md  USAGE_START.md  langgraph.json  openapi.json  pyproject.toml  repomix-output.xml  repomix.config.json  start.py  streamlit_app.py  test_app_final.py  test_streaming.py  test_streaming_mock.py  tools_validation_report.json
examples/: __init__.py  simple_conversation.py
scripts/: __init__.py  validate_tools.py
services/: __init__.py
services/mcp/: __init__.py  main.py
src/: main.py  utils.py
src/agent/: REACT_AGENT_GUIDE.md  README.md  TOOLS_GUIDE.md  __init__.py  example_usage.py  main.py  simple_example.py  tools.py  validate_tools.py
src/mcp/: __init__.py  utils.py
src/regulai/: __init__.py  agent.py  config.py  graph.py  tools.py
src/regulai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_tools.py
